# sleeping-bag-locator

./: .gitignore  .justfile  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  dev.dockerfile  openapi.yml  pyproject.toml
.github/actions/: terraform.yml
.github/actions/terraform/: action.yml
.github/workflows/: api-pr.yml  api.yml  infra-pr.yml  infra.yml
deploy/: main.tf  resources.tf  vars.tf
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  deployment.yaml  routing.yaml  service.yaml  serviceaccount.yaml
deploy/terraform/: .terraform.lock.hcl  main.tf  resources.tf
infra/: .terraform.lock.hcl  build_sa.tf  container_registry.tf  deployment_sa.tf  github.tf  lockbox.tf  main.tf  yandex_cloud.tf
src/: config.rs  constants.rs  dao.rs  http.rs  main.rs
src/dao/: entity.rs  mod.rs  pagination.rs  params.rs
src/dao/common/: mod.rs  pagination.rs
src/dao/impls/: hash_map.rs  mocked.rs  mod.rs
src/dao/items/: errors.rs  mod.rs
src/dao/items/dtos/: create.rs  item.rs  mod.rs  update.rs
src/dao/items/impls/: hash_map.rs  mocked.rs  mod.rs
src/dao/users/: errors.rs  interface.rs  mod.rs
src/dao/users/dtos/: create.rs  entity.rs  mod.rs  update.rs
src/dao/users/impls/: hash_map.rs  mocked.rs  mod.rs
src/http/: errors.rs  handlers.rs  mod.rs  state.rs
src/http/authentication/: callback.rs  dtos.rs  errors.rs  handlers.rs  login.rs  logout.rs  mod.rs  user_info.rs
src/http/common/: dtos.rs  errors.rs  handlers.rs  mod.rs
src/http/items/: dtos.rs  errors.rs  handlers.rs  mod.rs
src/http/users/: errors.rs  handlers.rs  mod.rs
src/http/users/dtos/: create.rs  entity.rs  mod.rs  update.rs
