[package]
name = "sleeping-bag-locator"
version = "0.1.0"
authors = ["ysignat <ignatovegors@gmail.com>"]
edition = "2021"
rust-version = "1.80"
description = "Pet project for tracking my belongings"
readme = "README.md"
repository = "https://github.com/ysignat/sleeping-bag-locator"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.26", features = ["env", "derive", "string", "cargo"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
thiserror = "2.0.11"

[dev-dependencies]
fake = { version = "3.1.0", features = ["chrono", "derive", "dummy", "uuid"] }
