[package]
name = "sleeping-bag-locator"
version = "0.1.0"
authors = ["ysignat <ignatovegors@gmail.com>"]
edition = "2021"
rust-version = "1.80"
description = "Pet project for tracking my belongings"
readme = "README.md"
repository = "https://github.com/ysignat/sleeping-bag-locator"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
enum_variant_names = "allow"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["env", "derive", "string", "cargo"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
], default-features = false }
oauth2 = "5.0.0"
async-session = "3.0.0"
axum-extra = { version = "0.9.6", features = ["cookie"] }
async-redis-session = "0.2.2"

[dev-dependencies]
fake = { version = "4.2.0", features = ["chrono", "derive", "dummy", "uuid"] }

[patch.crates-io]
# async-session last tag (3.0.0) was created on Jun 1, 2021
# Unfortunately, supertrait requirements were dropped after it, and dyn-dispatch requires this functionality
async-session = { git = "https://github.com/http-rs/async-session.git", rev = "1c686d86dfc4fc2f1e05d8253583da1b22473f11" }
